# CBCTool-Qt

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  trajectory_calculator.cpp  trajectory_calculator.h
.github/workflows/: cmake-multi-platform.yml
